[metadata]
# version is set by CI/CD pipeline
name = pyengnet
version = 0.0.1.3
description = pyEnGNet: optimized reconstruction of gene co-expression networks using multi-GPU
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.upo.es/investigacion/datai/
project_urls =
    Source Code = https://github.com/aureliolfdez/pyEnGNet/
    Bug Tracker = https://github.com/aureliolfdez/pyEnGNet/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir=
    =pyengnet
packages = find:
python_requires = >=3.9
install_requires =
    numpy
    tqdm
    multiprocess
    pandas
    matplotlib
    networkx
    scipy


[options.packages.find]
where = pyengnet
exclude =
    tests_integration*